k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-db-deployment
spec:
  selector:
    matchLabels:
      app: blog-db
  template:
    metadata:
      labels:
        app: blog-db
    spec:
      containers:
      - name: postgres
        image: postgres:16-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: blog-db-service
spec:
  selector:
    app: blog-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
