k8s/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: floracore-redis-deployment
spec:
  selector:
    matchLabels:
      app: floracore-redis
  template:
    metadata:
      labels:
        app: floracore-redis
    spec:
      containers:
      - name: redis
        image: redis:alpine
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: floracore-redis-service
spec:
  selector:
    app: floracore-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
