k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blogapi-service
  namespace: default
spec:
  type: ClusterIP # ClusterIP là phù hợp nếu dùng Ingress. (Đổi thành LoadBalancer nếu ko dùng Ingress)
  selector:
    app: blogapi
  ports:
    - protocol: TCP
      port: 80 # Cổng Service gọi bên trong K8s
      targetPort: 8080 # Cổng mà Container đang mở
